discussion/kv_engine/135240/135240_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Replace folly::CachelinePadded with folly::cacheline_aligned

In the current release of folly (v2020.08.24.00) CachelinePadded has
been removed, replaced with cacheline_aligned. Replace our uses of
CachelinePadded with cacheline_aligned.

Change-Id: I06d7ed9d77b336a45777bb58eae5017cbead4979

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-09-07 14:53:16.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-07 15:34:18.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4266/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/topkeys.h:23:10: error: "folly/lang/Aligned.h" file not found [clang-diagnostic-error]
#include <folly/lang/Aligned.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic_unordered_map.h:102:10: error: "folly/lang/Aligned.h" file not found [clang-diagnostic-error]
#include <folly/lang/Aligned.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/stats.h:24:10: error: "folly/lang/Aligned.h" file not found [clang-diagnostic-error]
#include <folly/lang/Aligned.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4266/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/topkeys.h:23:10:
error: "folly/lang/Aligned.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4266/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2793/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
